--- a/src/Components/NextDaysForecast/DayForecast/styles.module.scss
+++ b/src/Components/NextDaysForecast/DayForecast/styles.module.scss
@@ -3,6 +3,16 @@
   justify-content: space-between;
   width: 200px;
   margin-bottom: 20px;
+
+  @media (max-width: 900px) {
+    font-size: 14px;
+    flex-direction: column;
+    align-items: center;
+
+    &:nth-child(3) {
+      display: none;
+    }
+  }
 }
 
 .reduceMarginStyle {
