--- a/src/Components/CitySelect/styles.module.scss
+++ b/src/Components/CitySelect/styles.module.scss
@@ -3,10 +3,27 @@
   background-color: transparent;
   border: 1px dotted rgb(255, 255, 255, 0.4);
   border-radius: 10px;
-  padding: 10px 30px;
+  padding: 10px;
 
   @media (max-width: 1024px) {
     font-size: 16px;
     width: 200px;
+  }
+
+  @media (max-width: 900px) {
+    width: 180px;
+  }
+
+  @media (max-width: 700px) {
+    width: 160px;
+  }
+  @media (max-width: 600px) {
+    width: 130px;
+    font-size: 12px;
+  }
+
+  @media (max-width: 400px) {
+    width: 110px;
+    font-size: 8px;
   }
 }
