--- a/src/Components/WeatherStatistics/styles.module.scss
+++ b/src/Components/WeatherStatistics/styles.module.scss
@@ -4,6 +4,14 @@
   @media (max-width: 900px) {
     font-size: 50px;
   }
+
+  @media (max-width: 600px) {
+    font-size: 40px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 30px;
+  }
 }
 
 .humidity {
